# desmosearch-api

./: .gitignore  Cargo.toml  LICENSE  README.md
frontend/: package-lock.json
frontend/desmosearch-browser/: package-lock.json  package.json
frontend/desmosearch-browser/public/: index.html
frontend/desmosearch-browser/src/: App.js  index.css
src/: main.rs
test_dataset/: GraphsList.json  ParentGraphsList.json  format.js  objowner.json  package-lock.json  package.json  upload.js  upload.mjs
