[package]
name = "desmosearch-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde_json = "1.0"
serde = "1.0.133"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.26.0"